# partymap-bot

./: .gitignore  DEVELOPMENT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LLMS.md  MANUAL_CONTROL_SUMMARY.md  PHASE_2A_COMPLETE.md  PHASE_2B_COMPLETE.md  PHASE_2_COMPLETE.md  PLAYWRIGHT_TOOLKIT_IMPLEMENTATION.md  README.md  SHARED_TOOLS_IMPLEMENTATION.md  VISION_CLIENT_IMPLEMENTATION.md  dev.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  opencode.json  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  MIGRATIONS.md  alembic.ini  entrypoint.sh  migrate.sh  pyproject.toml
apps/api/external_schemas/: addEvent.example.json  addEvent.schema.json  addEventDate.example.json  addEventDate.schema.json  getEvents.example.json  getEvents.schema.json  updateEvent.example.json  updateEvent.schema.json  updateEventDate.example.json  updateEventDate.schema.json
apps/api/migrations/: 001_add_agent_streaming.sql  env.py  manual_migration_0003.sql
apps/api/migrations/versions/: 0002_add_langgraph_checkpoints.py  0003_add_update_workflow_fields.py  0004_add_validation_and_error_fields.py  0005_add_goabase_auto_sync_setting.py  20260422_1356_59d195c5a5da_.py  20260424_0000_d2842265e225_add_missing_indexes.py  initial_000000000001.py
apps/api/scripts/: init_db.py  replace_utcnow.py
apps/api/src/: __init__.py  config.py  main.py  pipeline_control.py
apps/api/src/agents/: __init__.py  deduplication.py  discovery.py
apps/api/src/api/: agents.py  costs.py  discovery.py  errors.py  festivals.py  goabase.py  jobs.py  pipelines.py  queries.py  refresh.py  settings.py  stats.py
apps/api/src/core/: __init__.py  database.py  error_classification.py  job_activity.py  job_tracker.py  models.py  schema_validator.py  schemas.py  settings_utils.py  validators.py
apps/api/src/dashboard/: __init__.py  router.py  schedule_router.py  settings_router.py
apps/api/src/partymap/: __init__.py  client.py  mappers.py
apps/api/src/research/: __init__.py  exa_client.py  lineup_extractor.py
apps/api/src/services/: __init__.py  browser_service.py  circuit_breaker.py  dead_letter_queue.py  exa_client.py  goabase_client.py  llm_client.py  musicbrainz_client.py  vision_client.py
apps/api/src/sources/: __init__.py  base.py  exa_browser.py  goabase.py  goabase_sync.py
apps/api/src/tasks/: __init__.py  celery_app.py  goabase_sync.py  goabase_tasks.py  maintenance.py  pipeline.py  refresh_pipeline.py  scheduler.py  signals.py
apps/api/src/utils/: logging.py  name_cleaner.py  utc_now.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: factories.py  mock_data.py
apps/api/tests/integration/: test_integration.py
apps/web/: .gitignore  (+7 more)
(+95 files in other folders)
